--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,5 +10,28 @@ body {
 button {
     width: 80px;
     height: auto;
-    
+    background-color: #ff9f43;
+    border: none;
+    border-radius: 5px;
+    transition-duration: .4s;
 }
+
+button:hover {
+    background-color: #feca57;
+}
+
+button:focus {
+    border: none;
+    outline-color: #b2bec3;
+}
+
+header {
+    width: 100%;
+    height: 100px;
+    color: white;
+    margin-top: 0;
+    text-align: center;
+    font-size: xx-large;
+    background-color: #2f3640;
+}
+
