--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,35 @@ header {
     background-color: #2f3640;
 }
 
+h1, h3, p, li {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+header h1 {
+    margin: 0;
+    padding-top: 8px;
+}
+
+
+input {
+    border: 1px solid #cecfd2;
+    border-radius: 10px;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    max-width: 600px;
+    height: 100%;
+}
+
+.search {
+    padding: 20px;
+    background-color: #f5f6fa;
+}
+
+.search h1 {
+    line-height: 20px;
+}
+
+
