--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,151 @@
-#current-weather{
-    border: 1px solid black;
+*{
+    box-sizing: border-box;
+}
+
+body {
+    height: 100%;
+    margin: 0;
+}
+
+button {
+    width: 80px;
+    height: auto;
+    background-color: #ff9f43;
+    border: none;
+    border-radius: 5px;
+    transition-duration: .4s;
+}
+
+button:hover {
+    background-color: #feca57;
+}
+
+button:focus {
+    border: none;
+    outline-color: #b2bec3;
+}
+
+header {
+    width: 100%;
+    height: 100px;
+    color: white;
+    margin-top: 0;
+    text-align: center;
+    font-size: xx-large;
+    background-color: #2f3640;
+}
+
+h1, h3, p, li {
+    font-family: 'Roboto', sans-serif;
+}
+
+header h1 {
+    margin: 0;
+    padding-top: 8px;
+}
+
+
+input {
+    border: 1px solid #cecfd2;
+    border-radius: 10px;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    max-width: 600px;
+    height: 100%;
+}
+
+.search {
+    padding: 20px;
+    background-color: #f5f6fa;
+}
+
+.search h1 {
+    line-height: 20px;
+}
+
+.forecast {
+    margin-top: 20px;
+    border: solid 1px ;
+    margin-left: 5%;
+    min-width: 600px;
+    padding: 10px 15px 15px 15px;
+}
+
+.five-day-container {
+    margin-top: 25px;
+    margin-left: 5%;
+}
+
+.card-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.five-day-card {
+    margin: 5px;
+}
+
+.five-day-card img {
+    margin-left: 10%;
+}
+
+.historyItems {
+    margin-top: 20px;
+}
+
+.historyItems:nth-child() {
+    margin-top: 20px;
+}
+
+img {
+    width: auto;
+    height: auto;
+}
+
+input {
+    height: 40px;
+    width: auto;
+}
+
+li:first-child {
+    height: 100%;
+    font-size: larger;
+    background-color: white;
+    border: solid 1px #cecfd2;
+    border-radius: 6px 6px 0px 0px;
+    padding: 12px 5px 12px 15px;
+    list-style: none;
+}
+
+li {
+    height: 100%;
+    font-size: larger;
+    background-color: white;
+    border: solid 1px #cecfd2;
+    border-radius: 0px 0px 0px 0px;
+    padding: 12px 5px 12px 15px;
+    list-style: none;
+}
+
+li:last-child {
+    height: 100%;
+    font-size: larger;
+    background-color: white;
+    border: solid 1px #cecfd2;
+    border-radius: 0px 0px 6px 6px;
+    padding: 12px 5px 12px 15px;
+    list-style: none;
+}
+
+.row {
+    display: flex;
+    line-height: 50%;
+    margin: 5px 5px 5px 0px;
+}
+
+.row * {
+    margin-right: 5px;
 }
